--- a/package.json
+++ b/package.json
@@ -3,30 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./app.ts",
-    "dev": "nodemon ./app.ts",
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
     "test": "mocha ./tests/Auth"
   },
   "dependencies": {
-    "agenda": "^4.0.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "event-dispatch": "^0.4.1",
     "express": "~4.16.1",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
-    "jade": "^1.9.2",
-    "mailgun-js": "^0.22.0",
+    "jade": "~1.11.0",
     "mongoose": "^5.11.18",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
-    "serve-favicon": "^2.5.0",
-    "typedi": "^0.10.0",
-    "winston": "^3.3.3"
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "chai": "^4.3.0",
