--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "test": "mocha ./tests/Auth"
+    "test": "jest",
+    "test-w": "jest --watchAll"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -25,8 +26,8 @@
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "chai": "^4.3.0",
-    "mocha": "^8.3.0",
-    "nyc": "^15.1.0"
+    "jest": "^26.6.3",
+    "nyc": "^15.1.0",
+    "supertest": "^6.1.3"
   }
 }
